--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
     </div>
 
     <p class="seo-text">
-      <strong>Rejestr jest całkowicie bezpłatny dla użytkowników</strong> - zarówno dla elektryków 
-      tworzących swoje profile, jak i dla osób poszukujących fachowca. Naszym celem jest stworzenie 
+      <strong>Rejestr jest całkowicie bezpłatny dla użytkowników</strong> - darmowa strona na Twój profil elkktryka, jak i miejsce dla osób poszukujących fachowca. Naszym celem jest stworzenie 
       największej i najbardziej wiarygodnej bazy elektryków w Polsce, opartej na przejrzystych 
       zasadach i weryfikacji kompetencji.
     </p>
@@ -211,7 +210,7 @@
            data-src="https://i.postimg.cc/rzJNCKcS/certyfikowani.png"
            loading="lazy">
       <h3>Certyfikowani fachowcy</h3>
-      <p>Platforma umożliwia przejrzyste zaprezentowanie zakresu kompetencji, specjalizacji oraz statusu profilu, dzięki czemu klienci mogą w wygodny sposób zapoznać się z ofertą fachowców działających w danym regionie.</p>
+      <p>Platforma umożliwia przejrzyste zaprezentowanie zakresu kompetencji, specjalizacji oraz statusu elektryka, dzięki czemu klienci mogą w wygodny sposób zapoznać się z ofertą fachowców działających w danym regionie.</p>
     </div>
   </section>
 </div>
