--- a/poczta/index.html
+++ b/poczta/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="address-bar">
-        <input type="text" id="urlInput" placeholder="Wpisz adres strony i naciśnij Enter" value="https://www.tauron.pl/tauron/o-tauronie/kariera/oferty-pracy?psize=15&workplace=krak%C3%B3w&career_level=stanowisko%20fizyczne" onkeypress="if(event.key==='Enter') fetchHTML()">
+        <input type="text" id="urlInput" placeholder="Wpisz adres strony i naciśnij Enter" value="" onkeypress="if(event.key==='Enter') fetchHTML()">
     </div>
     <div class="code-container">
         <pre id="codeOutput"></pre>
